# shixi1

05-图形化编程-1/: CMakeLists.txt  Makefile  filelist.txt  lv_conf.h  lv_drv_conf.h  main.c  ui.c  ui.h  video_type.h
05-图形化编程-1/lvgl/examples/libs/bmp/: lv_example_bmp_1.c
05-图形化编程-1/lvgl/src/misc/: lv_area.h
05-图形化编程-1/screens/: ui_Screen1.c
05-图形化编程-1/usrCode/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c
05-图形化编程-1/usrCode/images/: ui_img_1_png.c  ui_img_2_png.c  ui_img_3_png.c  ui_img_4_png.c
05-图形化编程-1/usrCode/screens/: ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen6.c  ui_Screen6.h  ui_screen1.c  ui_screen1.h  ui_screen2.c  ui_screen2.h
